cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(BOOST_ROOT /usr)
set(Boost_NO_SYSTEM_PATHS ON)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_DEBUG ON)
find_package(Boost 1.59.0 REQUIRED COMPONENTS log)
add_definitions(-DBOOST_ALL_DYN_LINK)
add_executable(trivial_log trivial_log.cc)
target_link_libraries(trivial_log Boost::log)
